add bottom menu and ngFor for goals

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-page-goals></app-page-goals>
+<app-bottom-bar></app-bottom-bar>
+
+<div class="container">
+    <app-page-goals></app-page-goals>
+</div>
